--- a/app/src/main/res/layout/add_exercise_list.xml
+++ b/app/src/main/res/layout/add_exercise_list.xml
@@ -11,11 +11,11 @@
         android:id="@+id/txtname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="11dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginTop="5dp"
         android:layout_marginLeft="15dp"
         android:layout_marginStart="15dp"
-        android:gravity="center"
+        android:gravity="start|bottom"
+        android:layout_gravity="bottom"
         android:fontFamily="@font/mlight"
         android:background="@color/colorPrimaryDark"
         android:textColorHint="@color/gray"
@@ -30,11 +30,11 @@
         android:layout_height="wrap_content"
         android:layout_toLeftOf="@+id/btnaddwork"
         android:fontFamily="@font/mmedium"
-        android:layout_marginTop="13dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginTop="7dp"
         android:layout_marginEnd="5dp"
         android:layout_marginRight="5dp"
-        android:gravity="center"
+        android:gravity="center|bottom"
+        android:layout_gravity="bottom"
         android:textColor="@color/white"
         android:background="@color/colorPrimaryDark"
         android:textSize="15sp"
@@ -47,11 +47,11 @@
         android:layout_height="wrap_content"
         android:layout_toLeftOf="@+id/txtpause"
         android:fontFamily="@font/mmedium"
-        android:layout_marginTop="13dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginTop="7dp"
         android:layout_marginEnd="5dp"
         android:layout_marginRight="5dp"
-        android:gravity="center"
+        android:gravity="center|bottom"
+        android:layout_gravity="bottom"
         android:background="@color/colorPrimaryDark"
         android:textSize="15sp"
         android:textColorHint="@color/gray"
@@ -65,12 +65,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toLeftOf="@+id/btnaddpause"
+        android:layout_marginTop="7dp"
         android:layout_marginEnd="5dp"
         android:layout_marginRight="5dp"
         android:fontFamily="@font/mmedium"
-        android:layout_marginTop="13dp"
-        android:layout_marginBottom="10dp"
-        android:gravity="center"
+        android:gravity="center|bottom"
+        android:layout_gravity="bottom"
         android:textColor="@color/white"
         android:background="@color/colorPrimaryDark"
         android:textSize="15sp"
@@ -82,11 +82,11 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/mmedium"
         android:layout_toLeftOf="@+id/btndeleteexercise"
-        android:layout_marginTop="13dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginTop="7dp"
         android:layout_marginEnd="5dp"
         android:layout_marginRight="5dp"
-        android:gravity="center"
+        android:gravity="center|bottom"
+        android:layout_gravity="bottom"
         android:background="@color/colorPrimaryDark"
         android:textSize="15sp"
         android:textColorHint="@color/gray"
@@ -101,9 +101,11 @@
         android:layout_height="wrap_content"
         android:background="@color/colorPrimaryDark"
         android:src="@drawable/ic_baseline_remove_circle_outline_24"
-        android:layout_marginTop="8dp"
+        android:gravity="center|bottom"
+        android:layout_gravity="bottom"
         android:onClick="deleteExerciseFromList"
         android:layout_alignParentRight="true"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="5dp"
         android:layout_marginRight="5dp"/>
 
