--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -145,7 +145,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="40dp"
         android:background="@color/trans"
-        android:src="@drawable/ic_menu_add"
+        android:src="@drawable/ic_baseline_library_add_24"
         app:layout_constraintEnd_toStartOf="@+id/btnloaddatabase"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/button_layout"/>
