--- a/app/src/main/res/layout/activity_add_workout2.xml
+++ b/app/src/main/res/layout/activity_add_workout2.xml
@@ -145,6 +145,20 @@
                         android:textSize="15sp"
                         android:textStyle="bold" />
 
+                    <TextView
+                        android:id="@+id/typename"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="start|center"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginStart="10dp"
+                        android:fontFamily="@font/mmedium"
+                        android:gravity="start|center"
+                        android:text="H.I.I.T. workout"
+                        android:textColor="@color/type"
+                        android:textSize="15sp"
+                        android:textStyle="italic" />
+
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="0dip"
@@ -225,6 +239,11 @@
                 android:orientation="vertical"
                 android:layout_marginTop="5dp">
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -237,6 +256,21 @@
                     android:textColor="@color/white"
                     android:textSize="15sp"
                     android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/diffname"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="start|center"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginStart="10dp"
+                        android:fontFamily="@font/mmedium"
+                        android:gravity="start|center"
+                        android:text="Beginner"
+                        android:textColor="@color/beginner"
+                        android:textSize="15sp"
+                        android:textStyle="italic" />
+                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
