--- a/app/src/main/res/layout/activity_workout.xml
+++ b/app/src/main/res/layout/activity_workout.xml
@@ -115,86 +115,88 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginBottom="10dp"
+        android:weightSum="10">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/gray"
             android:text="Difficulty:"
-            android:layout_marginBottom="10dp"
-            android:layout_marginStart="25dp"
-            android:layout_marginLeft="25dp"
+            android:layout_gravity="center"
             android:textSize="17sp"
             android:fontFamily="@font/mmedium"
+            android:layout_weight="3."
             android:gravity="center"/>
 
-        <Button
+        <ImageView
             android:id="@+id/btn1"
-            android:layout_width="30dp"
-            android:layout_height="wrap_content"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_gravity="center"
+            android:src="@drawable/star_white"
             android:background="@color/colorPrimaryDark"
-            android:text="1"
             android:onClick="filterWorkout"
-            android:textColor="@color/gray"
-            android:layout_marginStart="25dp"
-            android:layout_marginLeft="25dp"
-            android:textSize="15sp"
+            android:layout_weight="1.1"
             android:gravity="center"/>
 
-        <Button
+        <ImageView
             android:id="@+id/btn2"
-            android:layout_width="30dp"
-            android:layout_height="wrap_content"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_gravity="center"
+            android:src="@drawable/star_white"
             android:background="@color/colorPrimaryDark"
-            android:text="2"
             android:onClick="filterWorkout"
-            android:textColor="@color/gray"
-            android:textSize="15sp"
+            android:layout_weight="1.1"
             android:gravity="center"/>
 
-        <Button
+        <ImageView
             android:id="@+id/btn3"
-            android:layout_width="30dp"
-            android:layout_height="wrap_content"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_gravity="center"
+            android:src="@drawable/star_white"
             android:background="@color/colorPrimaryDark"
-            android:text="3"
             android:onClick="filterWorkout"
-            android:textColor="@color/gray"
-            android:textSize="15sp"
+            android:layout_weight="1.1"
             android:gravity="center"/>
 
-        <Button
+        <ImageView
             android:id="@+id/btn4"
-            android:layout_width="30dp"
-            android:layout_height="wrap_content"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_gravity="center"
+            android:src="@drawable/star_white"
             android:background="@color/colorPrimaryDark"
-            android:text="4"
             android:onClick="filterWorkout"
-            android:textColor="@color/gray"
-            android:textSize="15sp"
+            android:layout_weight="1.1"
             android:gravity="center"/>
 
-        <Button
+        <ImageView
             android:id="@+id/btn5"
-            android:layout_width="30dp"
-            android:layout_height="wrap_content"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_gravity="center"
+            android:src="@drawable/star_white"
             android:background="@color/colorPrimaryDark"
-            android:text="5"
             android:onClick="filterWorkout"
-            android:textColor="@color/gray"
-            android:textSize="15sp"
+            android:layout_weight="1.1"
             android:gravity="center"/>
 
-        <Button
+
+        <ImageView
             android:id="@+id/btnall"
-            android:layout_width="35dp"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:text="ALL"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_baseline_clear_24"
+            android:background="@color/colorPrimaryDark"
             android:onClick="filterWorkout"
-            android:textColor="@color/colorPrimaryDark"
-            android:textSize="15sp"
+            android:layout_weight="1.1"
+            android:layout_marginRight="10dp"
+            android:layout_marginEnd="10dp"
             android:gravity="center"/>
 
     </LinearLayout>
