--- a/app/src/main/res/layout/activity_string.xml
+++ b/app/src/main/res/layout/activity_string.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/colorPrimaryDark"
+    android:background="@drawable/gradient1"
     tools:context=".DetailActivity">
 
     <LinearLayout
@@ -55,8 +55,8 @@
 
     <EditText
         android:id="@+id/workout_string_name"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:layout_marginStart="30dp"
         android:layout_marginLeft="30dp"
         android:layout_marginEnd="30dp"
