--- a/app/src/main/res/layout/activity_timer.xml
+++ b/app/src/main/res/layout/activity_timer.xml
@@ -5,7 +5,7 @@
     android:id = "@+id/timerview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryDark"
+    android:background="@drawable/gradient1"
     tools:context=".TimerActivity">
 
     <TextView
