--- a/app/src/main/res/layout/list_exercises.xml
+++ b/app/src/main/res/layout/list_exercises.xml
@@ -13,7 +13,7 @@
         android:gravity="center"
         android:textColor="@color/white"
         android:fontFamily="@font/mlight"
-        android:background="@color/colorPrimaryDark"
+        android:background="@color/trans"
         android:text="Pushup toe touch"
         android:textSize="20sp" />
     <TextView
@@ -27,7 +27,7 @@
         android:layout_marginRight="10dp"
         android:gravity="bottom"
         android:textColor="@color/gray"
-        android:background="@color/colorPrimaryDark"
+        android:background="@color/trans"
         android:textSize="17sp"
         android:text="X20" />
     <TextView
@@ -40,7 +40,7 @@
         android:layout_marginTop="7dp"
         android:gravity="bottom"
         android:textColor="@color/gray"
-        android:background="@color/colorPrimaryDark"
+        android:background="@color/trans"
         android:textSize="17sp"
         android:layout_alignParentRight="true"
         android:text="in 50 s"/>
