--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -13,7 +13,7 @@
         android:paddingTop="3dp"
         android:layout_marginStart="5dp"
         android:layout_marginLeft="5dp"
-        android:background="@color/colorPrimaryDark"/>
+        android:background="@color/trans" />
     <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
