--- a/app/src/main/res/layout/list_workout_2.xml
+++ b/app/src/main/res/layout/list_workout_2.xml
@@ -14,7 +14,7 @@
         android:paddingTop="3dp"
         android:layout_marginStart="5dp"
         android:layout_marginLeft="5dp"
-        android:background="@color/colorPrimaryDark"/>
+        android:background="@color/trans"/>
     <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
@@ -56,7 +56,7 @@
         android:paddingTop="3dp"
         android:layout_marginStart="5dp"
         android:layout_marginLeft="5dp"
-        android:background="@color/colorPrimaryDark"/>
+        android:background="@color/trans"/>
 
     <TextView
         android:id="@+id/typetext"
