--- a/app/src/main/res/layout/activity_add_workout2.xml
+++ b/app/src/main/res/layout/activity_add_workout2.xml
@@ -492,7 +492,7 @@
         android:layout_marginLeft="0dp"
         android:layout_marginStart="0dp"
         android:fontFamily="@font/mmedium"
-        android:text="Add to Library"
+        android:text="Add to List"
         android:background="@color/white"
         android:textAlignment="center"
         android:textColor="@color/colorPrimaryDark"
