--- a/app/src/main/res/layout/activity_main_2.xml
+++ b/app/src/main/res/layout/activity_main_2.xml
@@ -1,25 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:weightSum="50"
     android:background="@drawable/gradient1"
     tools:context=".MainActivity">
-
-
-    <ImageView
-        android:id='@+id/picstatistics'
-        android:layout_width="280dp"
-        android:layout_height="280dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="10dp"
-        android:gravity="center"
-        android:src="@drawable/home_img"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titlepage" />
 
     <TextView
         android:id='@+id/titlepage'
@@ -36,47 +24,89 @@
         android:lineSpacingExtra="8dp"
         android:text="@string/title_string"
         android:textAlignment="center"
-        android:textColor="#FFFFFF"
-        android:textSize="38sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textColor="@color/white"
+        android:layout_weight="10"
+        android:textSize="35sp"/>
+
+
+    <ImageView
+        android:id='@+id/picstatistics'
+        android:layout_width="260dp"
+        android:layout_height="260dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:layout_weight="10"
+        android:src="@drawable/home_img" />
 
     <TextView
         android:id='@+id/subtitlepage'
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="260dp"
+        android:layout_marginTop="10dp"
         android:fontFamily="@font/mlight"
         android:gravity="center"
-        android:lineSpacingExtra="8dp"
+        android:lineSpacingExtra="2dp"
         android:text="@string/subtitle_string"
         android:textAlignment="center"
         android:textColor="#C0C0C0"
-        android:textSize="20sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/picstatistics" />
+        android:layout_weight="10"
+        android:textSize="20sp"/>
 
-   <!--170dp-->
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_weight="10"
+        android:weightSum="3">
+
+    <ImageButton
+        android:id="@+id/btnloaddatabase"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/trans"
+        android:onClick="populateDatabase"
+        android:src="@drawable/ic_menu_upload"
+        android:layout_gravity="center"
+        android:layout_weight="1"/>
+
+    <ImageButton
+        android:id="@+id/buttonreset"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/trans"
+        android:src="@drawable/ic_menu_delete"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_gravity="center"
+        android:layout_weight="1"/>
+
+    <ImageButton
+        android:id="@+id/buttonaddworkout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/trans"
+        android:src="@drawable/ic_baseline_library_add_24"
+        android:layout_gravity="center"
+        android:layout_weight="1"/>
+    </LinearLayout>
+    <!--170dp-->
+
     <LinearLayout
         android:id="@+id/button_layout"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_weight="10"
         android:weightSum="2">
 
         <TextView
             android:id="@+id/btexercise"
             android:layout_width="0dp"
             android:layout_height="55dp"
-            android:layout_gravity="center_horizontal"
+            android:layout_gravity="center|bottom"
             android:layout_marginBottom="2dp"
             android:layout_marginEnd="2dp"
             android:layout_marginRight="2dp"
@@ -100,7 +130,7 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="55dp"
-            android:layout_gravity="center_horizontal"
+            android:layout_gravity="center|bottom"
             android:layout_marginLeft="2dp"
             android:layout_marginStart="2dp"
             android:layout_marginBottom="2dp"
@@ -119,38 +149,5 @@
 
     </LinearLayout>
 
-    <ImageButton
-        android:id="@+id/btnloaddatabase"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/trans"
-        android:onClick="populateDatabase"
-        android:src="@drawable/ic_menu_upload"
-        android:layout_marginBottom="40dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/button_layout"/>
 
-    <ImageButton
-        android:id="@+id/buttonreset"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/trans"
-        android:src="@drawable/ic_menu_delete"
-        android:layout_marginBottom="40dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/btnloaddatabase"
-        app:layout_constraintBottom_toTopOf="@+id/button_layout"/>
-
-    <ImageButton
-        android:id="@+id/buttonaddworkout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="40dp"
-        android:background="@color/trans"
-        android:src="@drawable/ic_baseline_library_add_24"
-        app:layout_constraintEnd_toStartOf="@+id/btnloaddatabase"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/button_layout"/>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
