--- a/app/src/main/res/layout/activity_workout.xml
+++ b/app/src/main/res/layout/activity_workout.xml
@@ -14,7 +14,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="10dp"
-        android:text="Workout Library"
+        android:text="Workouts"
         android:textSize="30sp"
         android:textColor="@color/white"
         android:gravity="center"
@@ -209,7 +209,7 @@
         android:layout_marginEnd="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="5dp"
         android:background="@color/white"/>
 
     <ListView
@@ -218,6 +218,7 @@
         android:layout_height="fill_parent"
         android:layout_weight="1"
         android:scrollbarSize="3dp"
+        android:divider="@color/trans"
         android:scrollbarStyle="outsideOverlay"
         android:scrollbars="vertical"
         android:scrollingCache="true"
