--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,9 +5,11 @@
     <color name="colorPrimaryDark2">#3c6382</color>
     <color name="colorPrimaryDark3">#0c2461</color>
     <color name="colorPrimaryDark4">#1e3799</color>
-    <color name="colorPrimaryDark5">#eb2f06</color>
-    <color name="colorPrimaryDark6">#f8c291</color>
-    <color name="colorPrimaryLight">#6678D1</color>
+    <color name="colorPrimaryDark6">#eb2f06</color>
+    <color name="colorPrimaryLight2">#f8c291</color>
+    <color name="colorPrimaryLight3">#e58e26</color>
+    <color name="colorPrimaryLight">#f3a683</color>
+    <color name="colorPrimaryDark5">#6678D1</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="white">#FFFFFF</color>
     <color name="gray">#C0C0C0</color>
